# mundIAl

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  agent-context-prompt.md  docker-compose.yml  package-lock.json  package.json
.claude/skills/design-system-skill/: SKILL.md
.github/workflows/: backend-ci.yml  frontend-ci.yml
.husky/: pre-commit
backend/: .env.example  Dockerfile  pyproject.toml  requirements.txt  vercel.json
backend/alembic/: env.py
backend/alembic/versions/: 4c8fa44f1090_initial_models.py
backend/app/: main.py
backend/app/core/: config.py
backend/app/db/: base.py  session.py
backend/app/db/models/: __init__.py  match.py  team.py
backend/app/ml/: classifier.py  explainer.py  feature_engineering.py  ics_parser.py
backend/app/modules/catalog/: catalog_repository.py  catalog_schemas.py  catalog_shared.py
backend/app/modules/players/: players_routes.py  players_schemas.py  players_service.py
backend/app/modules/recommendations/: recommendations_repository.py  recommendations_routes.py  recommendations_schemas.py  recommendations_service.py
backend/app/modules/setup/: setup_routes.py  setup_schemas.py  setup_service.py
backend/app/seed/: matches.json  seed.py  teams.json
backend/tests/: test_ics_parser.py
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  routeTree.gen.ts
frontend/src/api/: players.ts  recommendations.ts  setup.ts
frontend/src/components/: MatchRow.tsx  NavBar.tsx  PlayerInput.tsx  SlotEditor.tsx  StepperHeader.tsx  (+4 more)
(+24 files in other folders)
